--- a/lib/CodeFirstCloud.MessageBroker/CodeFirstCloud.MessageBroker.csproj
+++ b/lib/CodeFirstCloud.MessageBroker/CodeFirstCloud.MessageBroker.csproj
@@ -1,3 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    
+  <ItemGroup>
+    <ProjectReference Include="..\CodeFirstCloud.Core\CodeFirstCloud.Core.csproj" />
+  </ItemGroup>
 </Project>
