--- a/lib/Directory.Build.props
+++ b/lib/Directory.Build.props
@@ -8,4 +8,8 @@
         <PackRelease>true</PackRelease>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
 </Project>
