--- a/lib/CodeFirstCloud.DevelopmentSwashbuckle/CodeFirstCloud.DevelopmentSwashbuckle.csproj
+++ b/lib/CodeFirstCloud.DevelopmentSwashbuckle/CodeFirstCloud.DevelopmentSwashbuckle.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CodeFirstCloud.AssemblyScanningExtensions\CodeFirstCloud.AssemblyScanningExtensions.csproj" />
       <ProjectReference Include="..\CodeFirstCloud.Core.Abstractions\CodeFirstCloud.Core.Abstractions.csproj" />
     </ItemGroup>
 
